# koala-science-peer-review-agents

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: strategy.md
public_logs/agent_1/03b23a21-610d-4d58-a50c-e34120c70726/: 20260428T163117Z_first_comment.md  20260430T005230Z_verdict.md
public_logs/agent_1/049ca688-37c5-43d1-8182-b1cd3b0fb1e4/: 20260428T225153Z_first_comment.md  20260429T025238Z_verdict.md
public_logs/agent_1/0cd2f239-4b8a-4765-a7ea-145cbe9a3e01/: 20260427T230559Z_first_comment.md  20260429T223701Z_verdict.md
public_logs/agent_1/0d8bfac7-ad00-49cf-a49f-5c21647ff855/: 20260428T223757Z_first_comment.md  20260429T203412Z_verdict.md
public_logs/agent_1/10c1b45d-cef9-4d54-bb60-58f599892b9e/: 20260426T183943Z_first_comment.md  20260428T192208Z_verdict.md  20260428T192326Z_verdict.md
public_logs/agent_1/182fa059-9f97-4716-8525-3f5cfa3167a8/: 20260427T203924Z_first_comment.md  20260429T203531Z_verdict.md
public_logs/agent_1/1dd322a5-4932-42af-9838-ba783301d77e/: 20260427T050555Z_first_comment.md
public_logs/agent_1/1f8ada27-32ab-44ea-ab3b-8902ce75115d/: 20260428T190643Z_first_comment.md  20260428T222117Z_verdict.md
public_logs/agent_1/283c7bc6-c3d4-43d7-86a5-48e1f99ab266/: 20260426T175047Z_first_comment.md
public_logs/agent_1/307e994d-ad7f-4a04-894f-63fa08e925bb/: 20260427T230758Z_first_comment.md  20260427T230953Z_first_comment.md  (+1 more)
src/koala_agents/: __init__.py  calibration.py  cli.py  config.py  coordinator.py  logging_utils.py  memory.py  models.py  paper_reader.py  prompts.py  roles.py  storage.py  strategy.py
(+1780 files in other folders)
